SDKs/twilio.com/twilio_video_v1/1.37.4/typescript/README.md
# openapi

<!-- Start SDK Installation -->
## SDK Installation

### NPM

```bash
npm add openapi
```

### Yarn

```bash
yarn add openapi
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```typescript
import { SDK, withSecurity} from "openapi";
import { CreateCompositionRequest, CreateCompositionResponse } from "openapi/src/sdk/models/operations";
import { AxiosError } from "axios";


const sdk = new SDK();
    
const req: CreateCompositionRequest = {
  security: {
    accountSidAuthToken: {
      password: "YOUR_PASSWORD_HERE",
      username: "YOUR_USERNAME_HERE",
    },
  },
  request: {
    audioSources: [
      "voluptas",
    ],
    audioSourcesExcluded: [
      "expedita",
      "consequuntur",
    ],
    format: "mp4",
    resolution: "expedita",
    roomSid: "voluptas",
    statusCallback: "fugit",
    statusCallbackMethod: "HEAD",
    trim: true,
    videoLayout: "rerum",
  },
};

sdk.createComposition(req).then((res: CreateCompositionResponse | AxiosError) => {
   // handle response
});
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createComposition`
* `createCompositionHook`
* `createCompositionSettings`
* `createRecordingSettings`
* `createRoom`
* `deleteComposition` - Delete a Recording Composition resource identified by a Composition SID.
* `deleteCompositionHook` - Delete a Recording CompositionHook resource identified by a `CompositionHook SID`.
* `deleteRecording` - Delete a Recording resource identified by a Recording SID.
* `deleteRoomRecording`
* `fetchComposition` - Returns a single Composition resource identified by a Composition SID.
* `fetchCompositionHook` - Returns a single CompositionHook resource identified by a CompositionHook SID.
* `fetchCompositionSettings`
* `fetchRecording` - Returns a single Recording resource identified by a Recording SID.
* `fetchRecordingSettings`
* `fetchRoom`
* `fetchRoomParticipant`
* `fetchRoomParticipantPublishedTrack` - Returns a single Track resource represented by TrackName or SID.
* `fetchRoomParticipantSubscribeRule` - Returns a list of Subscribe Rules for the Participant.
* `fetchRoomParticipantSubscribedTrack` - Returns a single Track resource represented by `track_sid`.  Note: This is one resource with the Video API that requires a SID, be Track Name on the subscriber side is not guaranteed to be unique.
* `fetchRoomRecording`
* `fetchRoomRecordingRule` - Returns a list of Recording Rules for the Room.
* `listComposition` - List of all Recording compositions.
* `listCompositionHook` - List of all Recording CompositionHook resources.
* `listRecording` - List of all Track recordings.
* `listRoom`
* `listRoomParticipant`
* `listRoomParticipantPublishedTrack` - Returns a list of tracks associated with a given Participant. Only `currently` Published Tracks are in the list resource.
* `listRoomParticipantSubscribedTrack` - Returns a list of tracks that are subscribed for the participant.
* `listRoomRecording`
* `updateCompositionHook`
* `updateRoom`
* `updateRoomParticipant`
* `updateRoomParticipantAnonymize`
* `updateRoomParticipantSubscribeRule` - Update the Subscribe Rules for the Participant
* `updateRoomRecordingRule` - Update the Recording Rules for the Room

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
